--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/24 200.png"
+                        <img src="https://github.com/AklilAsregid/bct/blob/main/24%20200.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -247,7 +247,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./images/48 200.png"
+                      <img src="https://github.com/AklilAsregid/bct/blob/main/48%20200.png"
                         class="img-fluid" />
                       <a href="#!">
                         <div class="hover-overlay">
@@ -293,7 +293,7 @@
                       <h4 class="mb-1 me-1">ብር 316,761.36</h4>
                     </div>
                     <div class="d-flex flex-column mt-4">
-                      <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                      <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>
                       <a href="https://wa.me/251937452375?text=Blue carbon 200ah 48v 10kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                           <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                           </button></a>
