--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
+                        <img src="https://github.com/AklilAsregid/bct/blob/main/Blue%20carbon%20Hybrid%20inverter%203.5kw%205.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -88,8 +88,7 @@
                         <span class="text-danger"><s>ብር 80,454.55</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
-                        <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+              <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                     <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
@@ -106,7 +105,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
+                        <img src="https://github.com/AklilAsregid/bct/blob/main/Blue%20carbon%20Hybrid%20inverter%203.5kw%205.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -165,8 +164,7 @@
                         <span class="text-danger"><s>ብር 108,950</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
-                        <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                                  <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                        <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
@@ -229,8 +227,7 @@
                         <h4 class="mb-1 me-1">ብር 181,818.18</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
-                        <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                                   <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                        <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
