--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     
-    <title>Osho Energy</title>
+    <title>Blue Carbon Ethiopia</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href= "https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://github.com/AklilAsregid/bct/blob/main/Blue%20carbon%20Hybrid%20inverter%203.5kw%205.5kw.png"
+                        <img src="./bct_3.5kw_5.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
