--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://github.com/AklilAsregid/bct/blob/main/Blue%20carbon%20Hybrid%20inverter%203.5kw%205.5kw.png"
+                        <img src="bct_3.5kw_5.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -181,7 +181,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://github.com/AklilAsregid/bct/blob/main/24%20200.png"
+                        <img src="/24_200.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
