--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="48_20200.png"
+                      <img src="https://raw.githubusercontent.com/AklilAsregid/bct/refs/heads/main/48_200.png"
                         class="img-fluid" />
                       <a href="#!">
                         <div class="hover-overlay">
