--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <title>Blue Carbon Ethiopia</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -181,7 +180,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="/24_200.png"
+                        <img src="./24_200.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -244,7 +243,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="https://raw.githubusercontent.com/AklilAsregid/bct/refs/heads/main/48_200.png"
+                      <img src="./48_200.png"
                         class="img-fluid" />
                       <a href="#!">
                         <div class="hover-overlay">
@@ -283,7 +282,7 @@
                     <span>Recommended Temperature:10℃-45℃<br /></span>
                     <span class="text-primary"> • </span>
                     <span>cycle life: >6000 times（<0.5C）<br /></span>
-
+ 
                   </div>
                   <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                     <div class="d-flex flex-row align-items-center mb-1">
