--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
+                        <img src="./Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -107,7 +107,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
+                        <img src="./Blue carbon Hybrid inverter 3.5kw 5.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -184,7 +184,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./images/24 200.png"
+                        <img src="./24 200.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
                       <h5>lithium ion 
-                        battery 24V200Ah <img src="./images/5year_warranty.jpg" width="40">
+                        battery 24V200Ah <img src="./5year_warranty.jpg" width="40">
                       </h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
@@ -248,7 +248,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./images/48 200.png"
+                      <img src="./48 200.png"
                         class="img-fluid" />
                       <a href="#!">
                         <div class="hover-overlay">
@@ -312,7 +312,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                   <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                    <img src="./images/portable_solar_system.webp"
+                    <img src="./portable_solar_system.webp"
                       class="img-fluid" />
                     <a href="#!">
                       <div class="hover-overlay">
@@ -361,7 +361,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                  <img src="./images/Wawa.png"
+                  <img src="./Wawa.png"
                     class="img-fluid" />
                   <a href="#!">
                     <div class="hover-overlay">
