--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     
-    <title>Osho Energy</title>
+    <title>Aklil Blue Carbon</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href= "https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -117,7 +117,7 @@
                       </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
-                      <h5>Blue carbon 5.5kw 48v hybrid inverter <img src="./images/5year_warranty.jpg" width="40"></h5>
+                      <h5>Blue carbon 5.5kw 48v hybrid inverter </h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
                           <i class="fa fa-star"></i>
@@ -259,7 +259,7 @@
                   </div>
                   <div class="col-md-6 col-lg-6 col-xl-6">
                     <h5>lithium ion 
-                      battery 48V 200Ah <img src="./images/5year_warranty.jpg" width="40">
+                      battery 48V 200Ah <img src="/5year_warranty.jpg" width="40">
                     </h5>
                     <div class="d-flex flex-row">
                       <div class="text-danger mb-1 me-2">
@@ -323,7 +323,7 @@
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                   <h5>Portable Solar 
-                    Power System 1kw inverter and 1kwh lithium ion battery <img src="./images/5year_warranty.jpg" width="40">
+                    Power System 1kw inverter and 1kwh lithium ion battery <img src="/5year_warranty.jpg" width="40">
                   </h5>
                   <div class="d-flex flex-row">
                     <div class="text-danger mb-1 me-2">
@@ -371,7 +371,7 @@
                 </div>
               </div>
               <div class="col-md-6 col-lg-6 col-xl-6">
-                <h5> solar flood light 1600 lumen <img src="./images/5year_warranty.jpg" width="40">
+                <h5> solar flood light 1600 lumen <img src="/5year_warranty.jpg" width="40">
                 </h5>
                 <div class="d-flex flex-row">
                   <div class="text-danger mb-1 me-2">
