--- a/product.html
+++ b/product.html
@@ -89,7 +89,7 @@
                         <span class="text-danger"><s>ብር 80,454.55</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                        <button  ><a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html">Details</a> </button>
                         <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -166,7 +166,7 @@
                         <span class="text-danger"><s>ብር 108,950</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                        <button  ><a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html">Details</a> </button>
                         <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -230,7 +230,7 @@
                         <h4 class="mb-1 me-1">ብር 181,818.18</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                        <button  ><a href="https://www.bluecarbontech.com.cn/en/product-detail/358.html">Details</a> </button>
                         <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -259,7 +259,7 @@
                   </div>
                   <div class="col-md-6 col-lg-6 col-xl-6">
                     <h5>lithium ion 
-                      battery 48V 200Ah <img src="/5year_warranty.jpg" width="40">
+                      battery 48V 200Ah <img src="/5year_warranty.jpg" width="40"> 
                     </h5>
                     <div class="d-flex flex-row">
                       <div class="text-danger mb-1 me-2">
@@ -294,7 +294,7 @@
                       <h4 class="mb-1 me-1">ብር 316,761.36</h4>
                     </div>
                     <div class="d-flex flex-column mt-4">
-                      <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                      <button  ><a href="https://bluecarbon.solar/product/48v-200ah-stackable-lithium-battery/">Details</a> </button>
                       <a href="https://wa.me/251937452375?text=Blue carbon 200ah 48v 10kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                           <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                           </button></a>
@@ -343,7 +343,7 @@
                     <h4 class="mb-1 me-1">ብር 85,490</h4>
                   </div>
                   <div class="d-flex flex-column mt-4">
-                    <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                    <button  ><a href="https://aklilasregid.github.io/bct/1KWH.pdf">Details</a> </button>
                     <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                         <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                         </button></a>
@@ -393,7 +393,70 @@
                   <h4 class="mb-1 me-1">ብር 8,450</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
-                  <button  ><a href="https://aklilasregid.github.io/aklilinvetory.github.io/BCT-FXC-4KW-Single-Phase_hybrid_Inverter.pdf">Details</a> </button>
+                  <button  ><a href="https://www.bctvnergy.com/Content/upload/pdf/202129346/FLOOD-LIGHT-13W-WAWA-3.0.pdf?rnd=833">Details</a> </button>
+                  <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                      <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
+                      </button></a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center mt-3">
+      <div class="col-md-12 col-xl-10">
+        <div class="card shadow-0 border rounded-3">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                  <img src="/shoto_sda10_48200"
+                    class="img-fluid" />
+                  <a href="#!">
+                    <div class="hover-overlay">
+                      <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-6 col-xl-6">
+                <h5> Shoto SDA10-48200 <img src="/5year_warranty.jpg" width="40">
+                </h5>
+                <div class="d-flex flex-row">
+                  <div class="text-danger mb-1 me-2">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                </div>
+                span class="text-primary"> • </span>
+                    <span>Standard Capacity: 51.2V 200Ah<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Continuous Input Current ：100A<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Continuous Output Current：100A<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Standard Charging voltage: 56.4V-60.4V <br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Termination Voltage: 2.5V<br /></span> 
+                    <span class="text-primary"> • </span>
+                    <span>Depth of discharge: >80%<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Recommended Temperature:10℃-45℃<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>cycle life: >3000 times（<0.5C）@DOD 80%<br /></span>
+                    <span class="text-primary"> • </span>
+                    <span>Dimension (L/W/H) : 480x442x245 mm <br /></span>
+</div>
+              <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                <div class="d-flex flex-row align-items-center mb-1">
+                  <h4 class="mb-1 me-1">ብር 350,000</h4>
+                </div>
+                <div class="d-flex flex-column mt-4">
+                  <button  ><a href="https://cdn.enfsolar.com/z/pp/nu3501surv4/5.SDA10-48200-EN.pdf?_gl=1*1dfvj1b*_gcl_au*MTg5NjUzNzgxMy4xNzMyNzA4MDMx">Details</a> </button>
                   <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                       <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                       </button></a>
