detail link and image updated and added

--- a/product.html
+++ b/product.html
@@ -89,7 +89,7 @@
                         <span class="text-danger"><s>ብር 80,454.55</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html">Details</a> </button>
+                        <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                         <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -166,7 +166,7 @@
                         <span class="text-danger"><s>ብር 108,950</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html">Details</a> </button>
+                        <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                         <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
                       <h5>lithium ion 
-                        battery 24V200Ah <img src="/5year_warranty.jpg" width="40">
+                        battery 24V200Ah <img src="./5year_warranty.jpg" width="40">
                       </h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
@@ -230,7 +230,7 @@
                         <h4 class="mb-1 me-1">ብር 181,818.18</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                        <button  ><a href="https://www.bluecarbontech.com.cn/en/product-detail/358.html">Details</a> </button>
+                        <a href="https://www.bluecarbontech.com.cn/en/product-detail/358.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                         <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
@@ -259,7 +259,7 @@
                   </div>
                   <div class="col-md-6 col-lg-6 col-xl-6">
                     <h5>lithium ion 
-                      battery 48V 200Ah <img src="/5year_warranty.jpg" width="40"> 
+                      battery 48V 200Ah <img src="./5year_warranty.jpg" width="40"> 
                     </h5>
                     <div class="d-flex flex-row">
                       <div class="text-danger mb-1 me-2">
@@ -294,7 +294,7 @@
                       <h4 class="mb-1 me-1">ብር 316,761.36</h4>
                     </div>
                     <div class="d-flex flex-column mt-4">
-                      <button  ><a href="https://bluecarbon.solar/product/48v-200ah-stackable-lithium-battery/">Details</a> </button>
+                      <a href="https://bluecarbon.solar/product/48v-200ah-stackable-lithium-battery/"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                       <a href="https://wa.me/251937452375?text=Blue carbon 200ah 48v 10kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                           <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                           </button></a>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                   <h5>Portable Solar 
-                    Power System 1kw inverter and 1kwh lithium ion battery <img src="/5year_warranty.jpg" width="40">
+                    Power System 1kw inverter and 1kwh lithium ion battery <img src="./5year_warranty.jpg" width="40">
                   </h5>
                   <div class="d-flex flex-row">
                     <div class="text-danger mb-1 me-2">
@@ -343,7 +343,7 @@
                     <h4 class="mb-1 me-1">ብር 85,490</h4>
                   </div>
                   <div class="d-flex flex-column mt-4">
-                    <button  ><a href="https://aklilasregid.github.io/bct/1KWH.pdf">Details</a> </button>
+                    <a href="https://aklilasregid.github.io/bct/1KWH.pdf"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                     <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                         <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                         </button></a>
@@ -371,7 +371,7 @@
                 </div>
               </div>
               <div class="col-md-6 col-lg-6 col-xl-6">
-                <h5> solar flood light 1600 lumen <img src="/5year_warranty.jpg" width="40">
+                <h5> solar flood light 1600 lumen <img src="./5year_warranty.jpg" width="40">
                 </h5>
                 <div class="d-flex flex-row">
                   <div class="text-danger mb-1 me-2">
@@ -393,7 +393,7 @@
                   <h4 class="mb-1 me-1">ብር 8,450</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
-                  <button  ><a href="https://www.bctvnergy.com/Content/upload/pdf/202129346/FLOOD-LIGHT-13W-WAWA-3.0.pdf?rnd=833">Details</a> </button>
+                  <a href="https://www.bctvnergy.com/Content/upload/pdf/202129346/FLOOD-LIGHT-13W-WAWA-3.0.pdf?rnd=833"><button class="btn btn-secondary" >Details with Datasheet</button></a> 
                   <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                       <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                       </button></a>
@@ -411,7 +411,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                  <img src="/shoto_sda10_48200"
+                  <img src="./Shoto_SDA10_48200.png"
                     class="img-fluid" />
                   <a href="#!">
                     <div class="hover-overlay">
@@ -421,7 +421,7 @@
                 </div>
               </div>
               <div class="col-md-6 col-lg-6 col-xl-6">
-                <h5> Shoto SDA10-48200 <img src="/5year_warranty.jpg" width="40">
+                <h5> Shoto SDA10-48200 <img src="./5year_warranty.jpg" width="40">
                 </h5>
                 <div class="d-flex flex-row">
                   <div class="text-danger mb-1 me-2">
@@ -456,7 +456,7 @@
                   <h4 class="mb-1 me-1">ብር 350,000</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
-                  <button  ><a href="https://cdn.enfsolar.com/z/pp/nu3501surv4/5.SDA10-48200-EN.pdf?_gl=1*1dfvj1b*_gcl_au*MTg5NjUzNzgxMy4xNzMyNzA4MDMx">Details</a> </button>
+                  <a href="https://cdn.enfsolar.com/z/pp/nu3501surv4/5.SDA10-48200-EN.pdf?_gl=1*1dfvj1b*_gcl_au*MTg5NjUzNzgxMy4xNzMyNzA4MDMx"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                   <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                       <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                       </button></a>
