index updated shoto battery out BCT only

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                         <span class="text-danger"><s>ብር 80,454.55</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-              <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                     <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                        <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
+                        <a href="https://wa.me/251937452375?text=Blue carbon 3.5kw 24v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
@@ -104,7 +105,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="bct_3.5kw_5.5kw.png"
+                        <img src="./bct_3.5kw_5.5kw.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -114,7 +115,7 @@
                       </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
-                      <h5>Blue carbon 5.5kw 48v hybrid inverter</h5>
+                      <h5>Blue carbon 5.5kw 48v hybrid inverter </h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
                           <i class="fa fa-star"></i>
@@ -163,7 +164,8 @@
                         <span class="text-danger"><s>ብር 108,950</s></span>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                                  <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                        <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                        <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
+                        <a href="https://wa.me/251937452375?text=Blue carbon 5.5kw 48v hybrid inverter" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
@@ -180,7 +182,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="./24_200.png"
+                        <img src="./24 200.png"
                           class="img-fluid" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -191,7 +193,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
                       <h5>lithium ion 
-                        battery 24V200Ah
+                        battery 24V200Ah <img src="./5year_warranty.jpg" width="40">
                       </h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
@@ -226,7 +228,8 @@
                         <h4 class="mb-1 me-1">ብር 181,818.18</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
-                                   <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>                        <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                        <a href="https://www.bluecarbontech.com.cn/en/product-detail/358.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
+                        <a href="https://wa.me/251937452375?text=Blue carbon 200ah 24v 5kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                             <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                             </button></a>
                       </div>
@@ -243,7 +246,7 @@
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./48_200.png"
+                      <img src="./48 200.png"
                         class="img-fluid" />
                       <a href="#!">
                         <div class="hover-overlay">
@@ -254,7 +257,7 @@
                   </div>
                   <div class="col-md-6 col-lg-6 col-xl-6">
                     <h5>lithium ion 
-                      battery 48V 200Ah
+                      battery 48V 200Ah <img src="./5year_warranty.jpg" width="40"> 
                     </h5>
                     <div class="d-flex flex-row">
                       <div class="text-danger mb-1 me-2">
@@ -289,7 +292,7 @@
                       <h4 class="mb-1 me-1">ብር 316,761.36</h4>
                     </div>
                     <div class="d-flex flex-column mt-4">
-                      <button  ><a href="https://www.bluecarbontech.com/">More Details</a> </button>
+                      <a href="https://bluecarbon.solar/product/48v-200ah-stackable-lithium-battery/"><button class="btn btn-secondary" >Details with Datasheet</button></a>
                       <a href="https://wa.me/251937452375?text=Blue carbon 200ah 48v 10kwh Lithium ion battery" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
                           <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
                           </button></a>
@@ -300,6 +303,105 @@
           </div>
         </div>
       </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-12 col-xl-10">
+          <div class="card shadow-0 border rounded-3">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                  <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                    <img src="./portable_solar_system.webp"
+                      class="img-fluid" />
+                    <a href="#!">
+                      <div class="hover-overlay">
+                        <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-6 col-xl-6">
+                  <h5>Portable Solar 
+                    Power System 1kw inverter and 1kwh lithium ion battery <img src="./5year_warranty.jpg" width="40">
+                  </h5>
+                  <div class="d-flex flex-row">
+                    <div class="text-danger mb-1 me-2">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
+                  </div>
+                  <span class="text-primary"> • </span>
+                  <span>Portable solar power system 1kwh lithium ion battery 1kw Inverter<br>
+                    <span class="text-primary"> • </span> whole set with 3 pcs light and 160w solar 
+                    panel</span>
+                </div>
+                <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center mb-1">
+                    <h4 class="mb-1 me-1">ብር 85,490</h4>
+                  </div>
+                  <div class="d-flex flex-column mt-4">
+                    <a href="https://aklilasregid.github.io/bct/1KWH.pdf"><button class="btn btn-secondary" >Details with Datasheet</button></a>
+                    <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                        <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
+                        </button></a>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+      <div class="col-md-12 col-xl-10">
+        <div class="card shadow-0 border rounded-3">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                  <img src="./Wawa.png"
+                    class="img-fluid" />
+                  <a href="#!">
+                    <div class="hover-overlay">
+                      <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-6 col-xl-6">
+                <h5> solar flood light 1600 lumen <img src="./5year_warranty.jpg" width="40">
+                </h5>
+                <div class="d-flex flex-row">
+                  <div class="text-danger mb-1 me-2">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </div>
+                </div>
+                <span class="text-primary"> • </span>
+                <span>Solar panel: 45Wp 5v<br>
+                  <span class="text-primary"> • </span>Battery: 80Wh LiFePO4</span>
+                  <span class="text-primary"> • </span>Light power: 1600lm</span>
+                  
+                  <span class="text-primary"> • </span>Installation height 3-4 meter</span>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                <div class="d-flex flex-row align-items-center mb-1">
+                  <h4 class="mb-1 me-1">ብር 8,450</h4>
+                </div>
+                <div class="d-flex flex-column mt-4">
+                  <a href="https://www.bctvnergy.com/Content/upload/pdf/202129346/FLOOD-LIGHT-13W-WAWA-3.0.pdf?rnd=833"><button class="btn btn-secondary" >Details with Datasheet</button></a> 
+                  <a href="https://wa.me/251937452375?text=blue carbon 1kwh solar box" class = "mt-2" title="click to open whatsapp chat"><button class="btn btn-success">
+                      <i class="fa fa-whatsapp"></i> Chat Now on Whatsapp
+                      </button></a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
       </section>
   </body>
 </html>
