--- a/product.html
+++ b/product.html
@@ -432,7 +432,7 @@
                     <i class="fa fa-star"></i>
                   </div>
                 </div>
-                span class="text-primary"> • </span>
+                <span class="text-primary"> • </span>
                     <span>Standard Capacity: 51.2V 200Ah<br /></span>
                     <span class="text-primary"> • </span>
                     <span>Continuous Input Current ：100A<br /></span>
