--- a/product.html
+++ b/product.html
@@ -85,8 +85,8 @@
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                       <div class="d-flex flex-row align-items-center mb-1">
-                        <h4 class="mb-1 me-1">ብር 68,181.82</h4>
-                        <span class="text-danger"><s>ብር 80,454.55</s></span>
+                       <h4 class="mb-1 me-1">ብር 78,409.09</h4>
+                       <!--   <span class="text-danger"><s>ብር 80,454.55</s></span> -->
                       </div>
                       <div class="d-flex flex-column mt-4">
                         <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
@@ -162,8 +162,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                       <div class="d-flex flex-row align-items-center mb-1">
-                        <h4 class="mb-1 me-1">ብር 92,330</h4>
-                        <span class="text-danger"><s>ብር 108,950</s></span>
+                        <h4 class="mb-1 me-1">ብር 106,178.98</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
                         <a href="https://www.bctvnergy.com/solar-inverter/blue-carbon-single-phase-off-grid-inverter-xn.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
@@ -227,7 +226,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                       <div class="d-flex flex-row align-items-center mb-1">
-                        <h4 class="mb-1 me-1">ብር 181,818.18</h4>
+                        <h4 class="mb-1 me-1">ብር 209,091</h4>
                       </div>
                       <div class="d-flex flex-column mt-4">
                         <a href="https://www.bluecarbontech.com.cn/en/product-detail/358.html"><button class="btn btn-secondary" >Details with Datasheet</button></a>
@@ -291,7 +290,7 @@
                   </div>
                   <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                     <div class="d-flex flex-row align-items-center mb-1">
-                      <h4 class="mb-1 me-1">ብር 316,761.36</h4>
+                      <h4 class="mb-1 me-1">ብር 364,275.50</h4>
                     </div>
                     <div class="d-flex flex-column mt-4">
                       <a href="https://bluecarbon.solar/product/48v-200ah-stackable-lithium-battery/"><button class="btn btn-secondary" >Details with Datasheet</button></a>
@@ -340,7 +339,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                   <div class="d-flex flex-row align-items-center mb-1">
-                    <h4 class="mb-1 me-1">ብር 85,490</h4>
+                    <h4 class="mb-1 me-1">ብር 88,863.64</h4>
                   </div>
                   <div class="d-flex flex-column mt-4">
                     <a href="https://aklilasregid.github.io/bct/1KWH.pdf"><button class="btn btn-secondary" >Details with Datasheet</button></a>
@@ -390,7 +389,7 @@
               </div>
               <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                 <div class="d-flex flex-row align-items-center mb-1">
-                  <h4 class="mb-1 me-1">ብር 8,450</h4>
+                  <h4 class="mb-1 me-1">ብር 8,495</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
                   <a href="https://www.bctvnergy.com/Content/upload/pdf/202129346/FLOOD-LIGHT-13W-WAWA-3.0.pdf?rnd=833"><button class="btn btn-secondary" >Details with Datasheet</button></a> 
@@ -448,12 +447,15 @@
                     <span>Recommended Temperature:10℃-45℃<br /></span>
                     <span class="text-primary"> • </span>
                     <span>cycle life: >3000 times（<0.5C）@DOD 80%<br /></span>
+                
+                    <span class="text-primary"> • </span>
+                    <span>Can be connected parallely upto 16s <br /></span>
                     <span class="text-primary"> • </span>
                     <span>Dimension (L/W/H) : 480x442x245 mm <br /></span>
 </div>
               <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                 <div class="d-flex flex-row align-items-center mb-1">
-                  <h4 class="mb-1 me-1">ብር 350,000</h4>
+                  <h4 class="mb-1 me-1">ብር 400,000</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
                   <a href="https://cdn.enfsolar.com/z/pp/nu3501surv4/5.SDA10-48200-EN.pdf?_gl=1*1dfvj1b*_gcl_au*MTg5NjUzNzgxMy4xNzMyNzA4MDMx"><button class="btn btn-secondary" >Details with Datasheet</button></a>
