--- a/product.html
+++ b/product.html
@@ -17,7 +17,10 @@
       <span class="text-primary ml-0" >Ethiopia</span>
       <ul class="navbar-nav">
         <li class="nav-item text-right">
-          <a class="nav-link" href="#">Aklil +251 937452375</a>
+          <a class="nav-link" href="https://wa.me/251937452375">Aklil +251 937452375</a>
+        </li>
+        <li class="nav-item text-right">
+          <a class="nav-link" href="#">VAT included</a>
         </li>
       </ul>
     </nav>
